<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".VegetablesActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/carrot" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:visibility="gone"
        app:srcCompat="@drawable/carrot" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/pumpkin" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:visibility="gone"
        app:srcCompat="@drawable/pumpkin" />

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/eggplant" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:visibility="gone"
        app:srcCompat="@drawable/eggplant" />

    <Button
        android:id="@+id/button4"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/brocolly" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:visibility="gone"
        app:srcCompat="@drawable/broccoly" />

    <Button
        android:id="@+id/button5"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/tomato" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:visibility="gone"
        app:srcCompat="@drawable/tomato3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="100dp"
        android:onClick="back"
        android:text="@string/back" />

</LinearLayout>