<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".AnimalsActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/lion" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="225dp"
        android:layout_height="156dp"
        android:layout_marginLeft="105dp"
        android:visibility="gone"
        app:srcCompat="@drawable/lion" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/cat" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190dp"
        android:layout_height="241dp"
        android:layout_marginLeft="125dp"
        android:visibility="gone"
        app:srcCompat="@drawable/cat" />

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/dog" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="267dp"
        android:layout_height="272dp"
        android:layout_marginLeft="80dp"
        android:visibility="gone"
        app:srcCompat="@drawable/dog" />

    <Button
        android:id="@+id/button4"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/fish" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="297dp"
        android:layout_height="174dp"
        android:layout_marginLeft="70dp"
        android:visibility="gone"
        app:srcCompat="@drawable/fish" />

    <Button
        android:id="@+id/button5"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/zebra" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="320dp"
        android:layout_height="319dp"
        android:layout_marginLeft="50dp"
        android:visibility="gone"
        app:srcCompat="@drawable/zebra" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="100dp"
        android:onClick="back"
        android:text="@string/back" />
</LinearLayout>