<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".FruitsActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:onClick="show"
        android:text="@string/apple" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:visibility="gone"
        app:srcCompat="@drawable/apple"
        tools:visibility="gone" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/grapes" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:visibility="gone"
        app:srcCompat="@drawable/grapes"
        tools:visibility="gone" />

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/orange" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:visibility="gone"
        app:srcCompat="@drawable/orange"
        tools:visibility="gone" />

    <Button
        android:id="@+id/button5"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/strawberry" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:visibility="gone"
        app:srcCompat="@drawable/strawberry"
        tools:visibility="gone" />

    <Button
        android:id="@+id/button6"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="@string/watermelon" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:visibility="gone"
        app:srcCompat="@drawable/watermelon"
        tools:visibility="gone" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="100dp"
        android:onClick="back"
        android:text="@string/back" />


</LinearLayout>